tests/NormalTests/paczka2/big_fuzzy/43407758.err
Error in line 5: 61x62je S988 48,1
Error in line 6: S988 S988 23,6
Error in line 28: JRT0LW7qc S994 52,7
Error in line 49: BHeupYYM S994 59,5
Error in line 55: bG4NNfF S489 63,9
Error in line 62: S988 A112 63,1
Error in line 68: y4K0 S994 18,4
Error in line 78: JRT0LW7qcS48921,0
Error in line 85: bG4NNfF A112 181,8
Error in line 89: BHeupYYM S489 23,09
Error in line 80: JRT0LW7qc S489 61,5
Error in line 61: 61x62je S994 18,7
Error in line 91: JRT0LW7qc S994 95,5
Error in line 104: ;RT0LW7qc S988 229,6
Error in line 102: bG4NNfF S994 78,4
Error in line 103: JRT0LW7qc S988 73,6
Error in line 109: bG4NNfF S988 55,6
Error in line 125: Ei9pPd S988 34,3
Error in line 136: 61x62je S988 06,2
Error in line 133: 61x62je S988 1,4
Error in line 139: 61x62je S994 71,5
Error in line 144: 61x62je S988 9,7
Error in line 146: Ei9pPd S489 9,0
Error in line 153: bG4NNfF S9}} }},7
Error in line 168: Ei9pPd S994 395,2
Error in line 176: Ei9pPd S994 82,7
Error in line 194: y4K0 S489 55,3
Error in line 164: bG4NNfF S988 349,5
Error in line 197: y4K0 S988 29,7
Error in line 205: y4K0 A112 97,2
Error in line 90: BHeupYYM S489 17,0
Error in line 206: y4K0 S994 74,6
Error in line 213: 61x62je S988 -5,4
Error in line 208: 61x62je S988 77,0
Error in line 218: 61x62je S994 97,9
Error in line 222: S988 A112 2486,3
Error in line 241: JRT0LW7qc A112 75,9
Error in line 239: 61x62je S489 11,7
Error in line 245: 61x62je S994 75,2
